--- a/frontend/css/responsive.css
+++ b/frontend/css/responsive.css
@@ -2,12 +2,31 @@
   .menus {
     display: none;
   }
+  #header {
+    z-index: 997;
+  }
+
+  #header.header-scrolled {
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: -120px;
+  }
 }
 
 /* // Medium devices (tablets, 768px and up) */
 @media (max-width: 768px) {
   .menus {
     display: none;
+  }
+  #header {
+    z-index: 997;
+  }
+
+  #header.header-scrolled {
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 100%;
+    top: -135px;
   }
 }
 
@@ -16,9 +35,19 @@
   .menus {
     display: none;
   }
+  #header {
+    z-index: 997;
+  }
+
+  #header.header-scrolled {
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 100%;
+    top: -135px;
+  }
 }
 
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
   .nav-menu .drop-down .drop-down ul {
     left: -90%;
   }
@@ -27,5 +56,24 @@
   }
   .nav-menu .drop-down .drop-down > a:after {
     content: "\ea9d";
+  }
+  .menus {
+    position: absolute;
+    top: 253px;
+    width: 100%;
+    border-top: 1px solid #909090;
+    border-bottom: 1px solid #909090;
+    background-color: white;
+    z-index: 3000;
+  }
+
+  .menus.sticky {
+    position: fixed;
+    top: 0;
+
+    border-top: none;
+    background: white;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    padding: 8px 0;
   }
 }
