--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -18,6 +18,31 @@ h6 {
   font-family: "Raleway", sans-serif;
 }
 
+.back-to-top {
+  position: fixed;
+  display: none;
+  right: 15px;
+  bottom: 15px;
+  z-index: 99999;
+}
+
+.back-to-top i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  border-radius: 4px;
+  background: #16df7e;
+  color: #fff;
+  transition: all 0.4s;
+}
+
+.back-to-top i:hover {
+  background: #206bfb;
+  color: #fff;
+}
 header {
   background-image: linear-gradient(
     180deg,
@@ -44,7 +69,33 @@ header {
 }
 
 .menus {
-  background-color: black;
+  position: absolute;
+  top: 284px;
+  width: 100%;
+  border-top: 1px solid #909090;
+  border-bottom: 1px solid #909090;
+  background-color: white;
+  z-index: 3000;
+}
+
+.menus.sticky {
+  position: fixed;
+  top: 50px;
+
+  border-top: none;
+  background: white;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  padding: 8px 0;
+}
+#header {
+  z-index: 997;
+}
+
+#header.header-scrolled {
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: -230px;
+  width: 100%;
 }
 /* Desktop Navigation */
 .nav-menu ul {
@@ -144,6 +195,93 @@ header {
   position: absolute;
   right: 15px;
 }
+
+.carousel-item {
+  /* height: 100vh; */
+  /* min-height: 300px; */
+  /* background: no-repeat scroll center scroll; */
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+.carousel-item::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: black;
+  opacity: 0.4;
+}
+.carousel-caption {
+  bottom: 180px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.carousel-caption h5 {
+  font-size: 80px;
+  font-weight: 700;
+}
+.carousel-caption p {
+  font-size: 18px;
+  top: 2rem;
+}
+
+/* LINK TERKAIT */
+.section-link h5 {
+  font-size: 28px;
+  font-weight: 700;
+}
+/* LINK TERKAIT */
+
+/* NEWS */
+.section-news h5 {
+  font-size: 28px;
+  font-weight: 700;
+}
+/* NEWS */
+/* GALERY */
+.section-galery h5 {
+  font-size: 28px;
+  font-weight: 700;
+}
+.component-news {
+  margin-bottom: 20px;
+}
+
+.component-news:hover {
+  text-decoration: none;
+}
+
+.component-news .news-thumbnail {
+  width: 100%;
+  height: 150px;
+  border-radius: 8px;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+
+.component-news .news-thumbnail:hover .news-image,
+.component-news .news-thumbnail:focus .news-image {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.component-news .news-thumbnail .news-image {
+  width: 100%;
+  height: 100%;
+  background-color: #ddd;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+/* GALERY*/
 
 /* Mobile Navigation */
 .mobile-nav-toggle {
