--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -43,6 +43,7 @@ h6 {
   background: #206bfb;
   color: #fff;
 }
+
 header {
   background-image: linear-gradient(
     180deg,
@@ -198,8 +199,8 @@ header {
 
 .carousel-item {
   /* height: 100vh; */
-  /* min-height: 300px; */
-  /* background: no-repeat scroll center scroll; */
+  /* min-height: 500px;
+  background: no-repeat scroll center scroll; */
   -webkit-background-size: cover;
   background-size: cover;
 }
