--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -282,7 +282,25 @@ header {
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
-/* GALERY*/
+
+.news-thumbnail {
+  position: relative;
+}
+
+.news-thumbnail a {
+  position: absolute;
+  top: 0;
+  bottom: 8px;
+  right: 0;
+  left: 0;
+  background-color: rgb(0, 0, 0, 0.7);
+  opacity: 0;
+  transition: opacity 0.9s;
+}
+
+.news-thumbnail:hover a {
+  opacity: 1;
+} /* GALERY*/
 
 /* Mobile Navigation */
 .mobile-nav-toggle {
