--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -320,7 +320,7 @@ header {
 .news-grid-box h1 {
   color: #fff;
   font-size: 30px;
-  font-weight: 400;
+
   letter-spacing: 2px;
   padding-bottom: 5px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
@@ -349,7 +349,6 @@ header {
 .news-grid-txt h2 {
   color: #111;
   font-size: 20px;
-  font-weight: 500;
   letter-spacing: 1px;
   margin: 10px 0px 5px 0px;
 }
@@ -379,9 +378,8 @@ header {
 .news-grid-txt p {
   color: #222;
   font-size: 14px;
-  font-weight: 300;
-  line-height: 170%;
-  letter-spacing: 1.5px;
+  font-weight: 100;
+  text-align: justify;
   border-bottom: 1px solid #ececec;
   padding-bottom: 15px;
   margin-bottom: 25px;
@@ -420,6 +418,10 @@ header {
 }
 /* NEWS */
 /* GALERY */
+.section-galery .row-galery {
+  height: 340px;
+  overflow: hidden;
+}
 .section-galery h5 {
   font-size: 28px;
   font-weight: 700;
