--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -379,8 +379,7 @@ header {
 .news-over {
   overflow: hidden;
   height: 70px;
-  margin-bottom: 30px;
-  border-bottom: 1px solid #ececec;
+  margin-bottom: 15px;
 }
 .news-grid-txt p {
   color: #222;
@@ -394,12 +393,11 @@ header {
 .news-grid-txt a {
   color: #fff;
   background: #26ccca;
+  margin-top: 50px;
   padding: 8px 20px;
   border-radius: 50px;
   font-size: 14px;
   font-weight: 300;
-  line-height: 30px;
-
   letter-spacing: 1px;
   text-decoration-line: none;
   transition: 0.5s;
