--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -394,7 +394,7 @@ header {
   color: #fff;
   background: #26ccca;
   margin-top: 50px;
-  padding: 8px 20px;
+  padding: 5px 20px;
   border-radius: 50px;
   font-size: 14px;
   font-weight: 300;
@@ -421,7 +421,148 @@ header {
   letter-spacing: 2px;
   transition: 0.5s;
 }
+
 /* NEWS */
+
+/* NEWS MENU */
+.news-menu .news-grid {
+  width: auto;
+  position: relative;
+  background: #fff;
+  border-radius: 5px;
+  overflow: hidden;
+  border: 1px solid #ddd; /*box-shadow: 0px 10px 30px 0px rgba(50, 50, 50, 0.16);*/
+  margin: 10px;
+}
+
+.news-menu .news-grid-image {
+  width: 100%;
+  height: 280px;
+  overflow: hidden;
+}
+
+.news-menu .news-grid-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s;
+}
+
+.news-menu .news-grid-box {
+  display: block;
+  position: absolute;
+  text-align: center;
+  background: #26ccca;
+  left: -80px;
+  top: 15px;
+  padding: 10px;
+  transition: 0.5s;
+}
+
+.news-menu .news-grid-box h1 {
+  color: #fff;
+  font-size: 30px;
+
+  letter-spacing: 2px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  margin-bottom: 5px;
+}
+
+.news-menu .news-grid-box p {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 0px;
+}
+
+.news-menu .news-grid-txt {
+  padding: 25px;
+}
+
+.news-menu .news-grid-txt span {
+  color: #26ccca;
+  font-size: 13px;
+  font-weight: 500;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+}
+
+.news-menu .news-grid-txt h2 {
+  color: #111;
+  font-size: 20px;
+  letter-spacing: 1px;
+  margin: 10px 0px 5px 0px;
+}
+
+.news-menu .news-grid-txt ul {
+  padding: 0;
+  margin: 0;
+}
+
+.news-menu .news-grid-txt ul li {
+  list-style: none;
+  display: inline-block;
+  color: #999;
+  font-size: 14px;
+  font-weight: 300;
+  margin: 8px 10px 8px 0px;
+  letter-spacing: 1px;
+}
+
+.news-menu .news-grid-txt ul li i {
+  color: #26ccca;
+  font-size: 14px;
+  font-weight: 500;
+  margin-right: 5px;
+}
+.news-menu .news-over {
+  overflow: hidden;
+  height: 70px;
+  margin-bottom: 15px;
+}
+.news-menu .news-grid-txt p {
+  color: #222;
+  font-size: 14px;
+  font-weight: 100;
+  text-align: justify;
+  padding-bottom: 15px;
+  margin-bottom: 25px;
+}
+
+.news-menu .news-grid-txt a {
+  color: #fff;
+  background: #26ccca;
+  margin-top: 50px;
+  padding: 5px 20px;
+  border-radius: 50px;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  text-decoration-line: none;
+  transition: 0.5s;
+}
+
+/*Hover-Section*/
+.news-grid:hover .news-grid-box {
+  left: 15px;
+  transition: 0.5s;
+}
+
+.news-grid:hover .news-grid-image img {
+  filter: grayscale(1);
+  transform: scale(1.1);
+  transition: 0.5s;
+}
+
+.news-grid:hover .news-grid-txt a {
+  text-decoration-line: none;
+  color: #fff;
+  letter-spacing: 2px;
+  transition: 0.5s;
+}
+
+/* NEWS MENU */
 /* GALERY */
 .gallery-menu,
 .section-sejarah,
