--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -424,6 +424,77 @@ header {
 
 /* NEWS */
 
+/* DETAILS NEWS */
+.section-detail-news .news-grid-txt {
+  padding: 25px;
+  text-align: center;
+}
+
+.section-detail-news .news-grid-txt span {
+  color: #26ccca;
+  font-size: 13px;
+  font-weight: 500;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+}
+
+.section-detail-news .news-grid-txt h2 {
+  color: #111;
+  font-weight: 700;
+  font-size: 41px;
+line-height: 50px;
+margin-bottom: 7px;
+margin-top: 0;
+overflow-wrap: break-word;
+}
+
+.section-detail-news .news-grid-txt ul {
+  padding: 0;
+  margin: 0;
+}
+
+.section-detail-news .news-grid-txt ul li {
+  list-style: none;
+  display: inline-block;
+  color: #999;
+  font-size: 14px;
+  font-weight: 300;
+  margin: 8px 10px 8px 0px;
+  letter-spacing: 1px;
+}
+
+.section-detail-news .news-grid-txt ul li i {
+  color: #26ccca;
+  font-size: 14px;
+  font-weight: 500;
+  margin-right: 5px;
+}
+
+.section-detail-news .news-grid-txt p {
+  color: #222;
+  font-size: 14px;
+  font-weight: 100;
+  text-align: justify;
+  padding-bottom: 15px;
+  margin-bottom: 25px;
+}
+
+.section-detail-news .news-grid-txt a {
+  color: #fff;
+  background: #26ccca;
+  margin-top: 50px;
+  padding: 5px 20px;
+  border-radius: 50px;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  text-decoration-line: none;
+  transition: 0.5s;
+}
+
+
+/* DETAILS NEWS */
+
 /* NEWS MENU */
 .news-menu .news-grid {
   width: auto;
@@ -565,7 +636,7 @@ header {
 /* NEWS MENU */
 /* GALERY */
 .gallery-menu,
-.section-sejarah,
+.section-sejarah, .section-detail-news,
 .news-menu {
   padding-top: 80px;
   padding-bottom: 80px;
