--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -619,7 +619,7 @@ header {
 
 .section-detail-news .comments-list .media-right,
 .section-detail-news .comments-list small {
-  color: #0a2ea5 !important;
+  color: #00b7e5 !important;
   font-size: 11px;
   letter-spacing: 2px;
   margin-top: 5px;
