--- a/frontend/css/responsive.css
+++ b/frontend/css/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 320px) and (max-width: 640px) {
+@media (max-width: 575px) {
   .menus {
     display: none;
   }
@@ -14,6 +14,16 @@
     position: fixed;
     top: -100px;
   }
+
+  /* KONTAK */
+  .contact .section-title h2 {
+    font-size: 28px;
+    margin-bottom: 15px;
+  }
+  .contact .section-title span {
+    font-size: 38px;
+  }
+  /* KONTAK */
 
   /* NEWS */
   .news-grid-image {
